--- a/rspace_frontend/package.json
+++ b/rspace_frontend/package.json
@@ -11,6 +11,7 @@
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.3",
     "core-js": "^3.6.5",
+    "element-plus": "^2.6.0",
     "jquery": "^3.7.1",
     "jwt-decode": "^4.0.0",
     "vue": "^3.0.0",
