--- a/Rspace_backend/Dockerfile
+++ b/Rspace_backend/Dockerfile
@@ -1,9 +1,12 @@
-FROM golang:1.17 as build-stage
+FROM golang:1.21 as build-stage
+
 WORKDIR /app
+
+# 配置代理
+RUN go env -w GOPROXY=https://goproxy.cn,direct
 COPY go.mod go.sum ./
 RUN go mod download
 COPY . .
 RUN go build -o main .
-
-EXPOSE 8080
+EXPOSE 9090
 CMD ["./main"]
