--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,29 +2,30 @@ version: '3'
 services:
   frontend:
     build:
-      context: ./frontend
+      context: ./Rspace_frontend
       dockerfile: Dockerfile
     ports:
-      - 8080:80
+      - 3333:80
 
   backend:
     build:
-      context: ./backend
+      context: ./Rspace_backend
       dockerfile: Dockerfile
     ports:
-      - 9090:8080
+      - 9090:9090
     depends_on:
       - db
 
   db:
     image: mysql:8.0
-    restart: always
+    # restart: always
     environment:
-      MYSQL_ROOT_PASSWORD: 123456
-      MYSQL_DATABASE: your_database_name
-      MYSQL_USER: your_username
-      MYSQL_PASSWORD: your_password
+      MYSQL_ROOT_PASSWORD: c316cb46aefed2fd80df56643cec2585
+      MYSQL_DATABASE: rspace
+      MYSQL_PORT: 3307
     ports:
-      - 3307:3306
+      - 3307:3307
     volumes:
       - ./data:/var/lib/mysql
+      - ./my.cnf:/etc/mysql/my.cnf
+
