--- a/rspace_frontend/Dockerfile
+++ b/rspace_frontend/Dockerfile
@@ -14,6 +14,9 @@ RUN npm run build
 # 阶段二：运行 Nginx 服务
 FROM nginx:latest as production-stage
 COPY --from=build-stage /app/dist /usr/share/nginx/html
+# COPY nginx.conf /etc/nginx/conf.d/default.conf
+COPY nginx.conf /etc/nginx/conf.d/default.conf
+
 # 外部访问容器中的nignx服务通过80端口
 EXPOSE 80
 CMD ["nginx", "-g", "daemon off;"]
